--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <div class="resume-items">
       
 <div class="row no-gutters justify-content-center">
-  <div class="col-xl-6 col-lg-6 col-md-8">
+  <div class="col-xl-6 col-lg-6 col-md-8 col-12">
     <h5>education</h5>
     <div class="resume-box">
       <div class="resume-contant">
@@ -267,7 +267,7 @@
       </div>
     </div>
   </div>
-  <div class="col-xl-6 col-lg-6 col-md-8">
+  <div class="col-xl-6 col-lg-6 col-md-8 col-12">
     <h5>EXPERIENCE</h5>
     <div class="resume-box">
       <div class="resume-contant">
