--- a/index.html
+++ b/index.html
@@ -531,11 +531,11 @@
 
 
 
- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ <script src="js/jquery.min.js"></script>
 
   <script src="js/jquery-2.2.3.min.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    
    <!--  <script src="js/jquery-3.3.1.slim.min.js"></script> -->
    <script src="js/wow.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
