--- a/index.html
+++ b/index.html
@@ -331,67 +331,6 @@
 </section>
 
 
-
-
-
-
-
-<!-- 
-<section class="work-section" id="Works">
-    <div class="container" data-js="filtering-demo">
-          <div class="heading">
-              <h1>work</h1>
-              <span>latest portfolio</span>
-            </div>
-
-          <ul class="nav justify-content-center filter-button-group">
-            <li>
-              <button class="is-checked" data-filter="*">all</button>
-            </li>
-            <li>
-              <button data-filter=".web">web</button>
-            </li>
-            <li>
-              <button data-filter=".interface">interface</button>
-            </li>
-            <li>
-              <button data-filter=".identity">identity</button>
-            </li>
-            <li>
-              <button data-filter=".design">design</button>
-            </li>
-          </ul>
-
-          <div class="row no-gutters work grid">
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 element-item web interface">
-              <img src="images/layer-1.png" class="img-fluid w-100">
-            </div>
-            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 element-item design identity">
-              <img src="images/layer-2.png" class="img-fluid w-100">
-            </div>
-            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 element-item web design">
-              <img src="images/layer-3.png" class="img-fluid w-100">
-            </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 element-item  identity">
-              <img src="images/layer-4.png" class="img-fluid w-100">
-            </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 element-item  interface">
-              <img src="images/layer-5.png" class="img-fluid w-100">
-            </div>
-          </div>
-        </div>
-    </section>
- -->
-
-
-
-
-
-
-
-
-
-
 <section class="work-section" id="works">
   <div class="container" data-js="filtering-demo">
     <div class="heading">
@@ -568,7 +507,7 @@
 
     <script>
         $.fakeLoader({
-          bgColor: '#e74c3c',
+          bgColor: '#40afcc',
           spinner: 'spinner2'
           });
    new WOW().init();
